--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,17 @@
 {
   "require": {
+    "doctrine/collections": "~1.3",
     "nette/tokenizer": "~2.2",
-    "nette/utils": "~2.3"
+    "nette/utils": "~2.3",
+    "tracy/tracy": "~2.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "TexToWiki\\": "src/TexToWiki"
+    },
+    "files": [
+      "src/TexToWiki/exceptions.php",
+      "src/TexToWiki/Latex/exceptions.php"
+    ]
   }
 }
