--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
     "doctrine/collections": "~1.3",
     "nette/tokenizer": "~2.2",
     "nette/utils": "~2.3",
+    "nette/php-generator": "~2.3",
     "tracy/tracy": "~2.3"
+  },
+  "require-dev": {
+    "nette/tester": "~1.7"
   },
   "autoload": {
     "psr-4": {
